# imffmpeg

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  url
include/: command_gui.hpp
include/commands/: probe_gui.hpp  transcode_gui.hpp
include/utils/: ffprobe_helper.hpp  imvec_operators.hpp
src/: main.cpp
